Correct arXiv links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <sup>2</sup> Software Engineering Department, Saint Petersburg State University<br>
            <sup>*</sup> Indicates equal contribution</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a class="btn btn-outline-secondary btn-lg px-4" href="" role="button">Paper</a>
+            <a class="btn btn-outline-secondary btn-lg px-4" href="https://arxiv.org/abs/2303.05123" role="button">Paper</a>
             <a class="btn btn-outline-secondary btn-lg px-4" href="https://github.com/prime-slam/place-recognition-db" role="button">Code</a>
         </div>
         <br>
@@ -79,7 +79,7 @@
             <p class="px-3 py-3">@article{vprdb2023,<br> 
                 title={Dominating Set Database Selection for Visual Place Recognition},<br>
                 author={Anastasiia Kornilova, Ivan Moskalenko, Timofei Pushkin, Fakhriddin Tojiboev, Rahim Tariverdizadeh, and Gonzalo Ferrer},<br>
-                journal={arXiv preprint arXiv:2208.00277},<br>
+                journal={arXiv preprint arXiv:2303.05123},<br>
                 year={2023}}</code>           
           </div>
         </div>
