Link to the dataset added

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <div class="container px-5">
             <img src="assets/sk-campus.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Pipeline" loading="lazy">
         </div>
-        <p class="lead">We have recorded a set of sequences in the Skoltech
+        <p class="lead">We have recorded two sequences in the Skoltech
             campus using Azure Kinect DK sensor. This environment
             contains repeated structures with similar design of desks,
             walls and doors and therefore provides more challenging
-            conditions for a VPR algorithm in the indoor environment. You can download this dataset <a href="">here</a>.</p>
+            conditions for a VPR algorithm in the indoor environment. You can download this dataset <a href="https://disk.yandex.ru/d/7KTziCr6Ye8Zjg">here</a>.</p>
     </div>
     <br>
 
